# GroupMaid

./: .gitignore  README.md  bot.example.ini  bot.ini.sample  pyproject.toml  requirements.txt
bot/: __init__.py  __main__.py  bot.py
bot/conf/: config.example.json
bot/plugins/: maid.py  setting.py  unpin.py
bot/utils/: help_text.py  helpers.py
